<resources>
    <string name="app_name">Login_and_Registration_ui</string>
    <string name="become_a_member">Become a member</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_sign_in"><font fgcolor="#1E1D2E">Already have an account?</font><font fgcolor="#023F9F"> Sign in</font></string>
    <string name="info_page_title">One click away from splitting the bill</string>
    <string name="info_text_subtitle">Sit back and never worry about sharing bill with your housemates again!</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip</string>
    <string name="button_login">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="don_t_have_a_account_sign_up_now"><font fgcolor="#1E1D2E">Don\'t have a account?</font><font fgcolor="#023F9F"> Sign up now</font></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_in">Sign in</string>
</resources>