<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="36dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_undraw_showing_support_re_5f2v"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/welcome_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:hintEnabled="true"
            android:id="@+id/textInputEmail"
            app:endIconTint="@color/black"
            app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toTopOf="@id/textInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:hintEnabled="true"
            android:id="@+id/textInputPassword"
            app:endIconTint="@color/black"
            app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:text="@string/remember_me"
            android:layout_marginLeft="@dimen/activity_margin_small"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <include
            android:id="@+id/includedBanner"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxRememberMe"
            layout="@layout/social_banner_layout"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:padding="@dimen/activity_margin_small"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            android:backgroundTint="@color/button_bg"
            app:iconGravity="textEnd"
            android:text="@string/button_login"
            app:layout_constraintTop_toBottomOf="@+id/includedBanner"
            android:layout_marginTop="@dimen/activity_margin_large"
            android:layout_marginStart="@dimen/activity_margin_small"
            android:layout_marginEnd="@dimen/activity_margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/question"
            android:text="@string/don_t_have_a_account_sign_up_now"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signup"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/primary_base"
            android:id="@+id/signup"
            android:text="@string/sign_up_now"
            android:layout_marginLeft="50dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/question"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>